--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,11 +32,11 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100"
-                     src="https://cdn.luxstay.com/rooms/12043/large/1518430184_Phong_kh%C3%A1ch_(Toan_canh).jpg"
+                     src="http://en.davno.ru/assets/images/cards/big/ny-7.gif"
                      alt="Second slide" style="height: 800px; width: 300px">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://cdn.luxstay.com/rooms/15176/large/1537408618_IMG_7906.jpg"
+                <img class="d-block w-100" src="https://i.ytimg.com/vi/InKDsnWg3x0/maxresdefault.jpg"
                      alt="Second slide" style="height: 800px; width: 300px">
             </div>
             <div class="carousel-item">
@@ -389,7 +389,7 @@
                     <div class="d-flex flex-row-reverse" style="margin-top: 5px">
                         <!-- Grid column -->
                         <ul class="footerNavLinks">
-                            <a href="#!"><img
+                            <a href="https://www.facebook.com/codegym.vn/"><img
                                     src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-facebook.png"
                                     alt="Facebook"></a>
                             <a href="#!"><img
@@ -410,7 +410,7 @@
             <div class="row mt-3">
 
                 <div class="section col-md-4">
-                    <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/">
+                    <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/" >
                         <img class="td-retina-data"
 
                              src="https://coinvn247.com/wp-content/uploads/2019/01/123456789.png"
