--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,11 +32,11 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100"
-                     src="https://cdn.luxstay.com/rooms/12043/large/1518430184_Phong_kh%C3%A1ch_(Toan_canh).jpg"
+                     src="http://en.davno.ru/assets/images/cards/big/ny-7.gif"
                      alt="Second slide" style="height: 800px; width: 300px">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://cdn.luxstay.com/rooms/15176/large/1537408618_IMG_7906.jpg"
+                <img class="d-block w-100" src="https://i.ytimg.com/vi/InKDsnWg3x0/maxresdefault.jpg"
                      alt="Second slide" style="height: 800px; width: 300px">
             </div>
             <div class="carousel-item">
