--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,7 +41,7 @@
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100"
-                     src="https://cdn.luxstay.com/rooms/14436/large/1534908497_image_6483441%20(11).JPG"
+                     src="https://hinhanhdephd.com/wp-content/uploads/2016/01/hinh-anh-dong-chuc-mung-nam-moi-gif-1.gif"
                      alt="Third slide" style="height: 800px; width: 300px">
             </div>
         </div>
