edit select search

--- a/src/app/search-house/search-house.component.html
+++ b/src/app/search-house/search-house.component.html
@@ -37,9 +37,9 @@
                         <div class="form-row align-items-center">
                             <div class="col-auto my-1">
                                 <select class="custom-select mr-sm-2"
-                                        name="keyword" formControlName="keyword">
+                                        name="keyword" formControlName="keyword" [value]="keyword">
                                     <option>Tìm theo giá tiền</option>
-                                    <option selected value="1">Từ 5 trăm - 1 triệu</option>
+                                    <option value="1">Từ 5 trăm - 1 triệu</option>
                                     <option value="2">Từ 1 triệu - 1.5 triệu</option>
                                     <option value="3">Từ 1.5 triệu - 2 triệu</option>
                                     <option value="4">Từ 2 triệu - 2.5 triệu</option>
