--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,15 +65,14 @@
             <nav class="navbar navbar-light" style="background-color: #EFFBFB;">
                 <a class="navbar-brand"></a>
                 <div class="form-group mb-2">
-                    <input type="text" readonly class="form-control-plaintext" value="Tìm kiếm theo giá tiền ">
+                    <input type="text" readonly class="form-control-plaintext" value="Tìm kiếm theo giá tiền">
                 </div>
                 <form (ngSubmit)="searchHouse()" [formGroup]="searchForm">
                     <div class="form-row align-items-center">
                         <div class="col-auto my-1">
                             <select class="custom-select mr-sm-2"
-                                    name="keyword" formControlName="keyword">
-                                <option>Tìm theo giá tiền</option>
-                                <option selected value="1">Từ 5 trăm - 1 triệu</option>
+                                    name="keyword" formControlName="keyword" [value]="1">
+                                <option value="1">Từ 5 trăm - 1 triệu</option>
                                 <option value="2">Từ 1 triệu - 1.5 triệu</option>
                                 <option value="3">Từ 1.5 triệu - 2 triệu</option>
                                 <option value="4">Từ 2 triệu - 2.5 triệu</option>
