--- a/src/app/customer/register/register.component.html
+++ b/src/app/customer/register/register.component.html
@@ -82,69 +82,89 @@
                         <div class="row">
                             <div class="col-md-2 col-sm-2 col-xs-2"></div>
                             <div class="col-md-8 col-sm-8 col-xs-8">
-                                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-                                    <div class="form-group row">
-                                        <label for="name" class="col-form-label col-md-3">Tên:</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" id="name"
-                                                   formControlName="name">
-                                            <div *ngIf="registerForm.get('name').invalid && registerForm.get('name').touched"
-                                                 style="color: red">
-                                                Hãy nhập tên của bạn!
-                                            </div>
-                                        </div>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                    Launch demo modal
+                                </button>
 
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="email" class="col-md-3 col-form-label">Email:</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" id="email"
-                                                   formControlName="email">
-                                            <div *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched"
-                                                 style="color: red">
-                                                Hãy nhập địa chỉ email của bạn!
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Đăng ký tài khoản</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                                                    <div class="form-group row">
+                                                        <label for="name" class="col-form-label col-md-3">Tên:</label>
+                                                        <div class="col-md-9">
+                                                            <input type="text" class="form-control" id="name"
+                                                                   formControlName="name">
+                                                            <div *ngIf="registerForm.get('name').invalid && registerForm.get('name').touched"
+                                                                 style="color: red">
+                                                                Hãy nhập tên của bạn!
+                                                            </div>
+                                                        </div>
+
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="email" class="col-md-3 col-form-label">Email:</label>
+                                                        <div class="col-md-9">
+                                                            <input type="text" class="form-control" id="email"
+                                                                   formControlName="email">
+                                                            <div *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched"
+                                                                 style="color: red">
+                                                                Hãy nhập địa chỉ email của bạn!
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="passsword" class="col-md-3 col-form-label">Mật khẩu:</label>
+                                                        <div class="col-md-9">
+                                                            <input type="password" class="form-control" id="passsword"
+                                                                   formControlName="password">
+                                                            <div *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched"
+                                                                 style="color: red">
+                                                                Mật khẩu là bắt buộc và có ít nhất 6 ký tự!
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="phone" class="col-md-3 col-form-label">Số điện thoại:</label>
+                                                        <div class="col-md-9">
+                                                            <input type="text" class="form-control" id="phone"
+                                                                   formControlName="phone">
+                                                            <div *ngIf="registerForm.get('phone').invalid && registerForm.get('phone').touched"
+                                                                 style="color: red">
+                                                                Hãy nhập vào số điện thoại của bạn!
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="address" class="col-md-3 col-form-label">Địa chỉ:</label>
+                                                        <div class="col-md-9">
+                                                            <input type="text" class="form-control" id="address"
+                                                                   formControlName="address">
+                                                            <div *ngIf="registerForm.get('address').invalid && registerForm.get('address').touched"
+                                                                 style="color: red">
+                                                                Hãy nhập vào địa chỉ của bạn!
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div *ngIf="message">
+                                                        <p style="background-color: aquamarine; text-align: center">{{message}}</p>
+                                                    </div>
+                                                    <button [disabled]="registerForm.invalid" type=submit
+                                                            class="btn btn-success center-block" style="float: right">Đăng ký</button>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group row">
-                                        <label for="passsword" class="col-md-3 col-form-label">Mật khẩu:</label>
-                                        <div class="col-md-9">
-                                            <input type="password" class="form-control" id="passsword"
-                                                   formControlName="password">
-                                            <div *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched"
-                                                 style="color: red">
-                                                Mật khẩu là bắt buộc và có ít nhất 6 ký tự!
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="phone" class="col-md-3 col-form-label">Số điện thoại:</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" id="phone"
-                                                   formControlName="phone">
-                                            <div *ngIf="registerForm.get('phone').invalid && registerForm.get('phone').touched"
-                                                 style="color: red">
-                                                Hãy nhập vào số điện thoại của bạn!
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="address" class="col-md-3 col-form-label">Địa chỉ:</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" id="address"
-                                                   formControlName="address">
-                                            <div *ngIf="registerForm.get('address').invalid && registerForm.get('address').touched"
-                                                 style="color: red">
-                                                Hãy nhập vào địa chỉ của bạn!
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div *ngIf="message">
-                                        <p style="background-color: aquamarine; text-align: center">{{message}}</p>
-                                    </div>
-                                    <button [disabled]="registerForm.invalid" type=submit
-                                            class="btn btn-success center-block" style="float: right">Đăng ký</button>
-                                </form>
+                                </div>
                             </div>
                             <div class="col-md-2 col-sm-2 col-xs-2"></div>
                         </div>
