--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -156,74 +156,140 @@
                         <div class="column2">
                             <div class="row">
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="http://tuvandulich.vn/data/News/image2.jpg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img alt="Điểm đến hàng đầu" height="270px"
+                                             src="http://tuvandulich.vn/data/News/image2.jpg"
+                                             class="img-1">
+                                        <img alt="Điểm đến hàng đầu" height="270px"
+                                             src="https://pystravel.vn/wp-content/uploads/2017/07/bai-dong-pys-travel0201.jpg"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3>Thanh Hóa </h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="https://huehomestay.net/wp-content/uploads/2018/02/cover-min.png">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://huehomestay.net/wp-content/uploads/2018/02/cover-min.png"
+                                             class="img-1">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://cdn.luxstay.com/rooms/14928/medium/1536720023_40231962_318176195398368_7230822152872656896_n.jpg"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3>Huế</h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="https://image-us.24h.com.vn/upload/3-2018/images/2018-07-17/Kham-pha-4-homestay-dep-quen-loi-ve-tai-Sa-Pa-1-1531819672-672-width650height340.jpg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://image-us.24h.com.vn/upload/3-2018/images/2018-07-17/Kham-pha-4-homestay-dep-quen-loi-ve-tai-Sa-Pa-1-1531819672-672-width650height340.jpg"
+                                             class="img-1">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://www.flynow.vn/blog/wp-content/uploads/2016/11/The-Haven-Sapa-Camp-Site-nha-nghi-gia-re-tai-sapa.jpg"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3>Sa Pa </h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="http://media.we25.vn/images/homstay-thung-ruou2.jpg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="http://media.we25.vn/images/homstay-thung-ruou2.jpg"
+                                             class="img-1">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://dulichdalat.pro/wp-content/uploads/2018/10/hoa-lavender-da-lat.jpg"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3>Đà Lạt</h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="http://pystravel.vn/wp-content/uploads/2017/02/nen-di-dau-choi-30-4-pys-travel0131.jpg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="http://pystravel.vn/wp-content/uploads/2017/02/nen-di-dau-choi-30-4-pys-travel0131.jpg"
+                                             class="img-1">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="http://haiphongcuoi.com/upload/baiviet/30%20x%2020%20(1).JPG"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3> Hải Phòng </h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="http://mrhanhphuc.com/uploaded/uploads/2018/03/chup-anh-cuoi-o-nha-tho-lon-ha-noi.jpg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px"
+                                             alt="Điểm đến hàng đầu"
+                                             src="http://mrhanhphuc.com/uploaded/uploads/2018/03/chup-anh-cuoi-o-nha-tho-lon-ha-noi.jpg"
+                                             class="img-1">
+                                        <img height="270px"
+                                             alt="Điểm đến hàng đầu"
+                                             src="https://znews-photo.zadn.vn/w660/Uploaded/ywfau/2014_02_27/cauLB2.jpg"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3>Hà Nội</h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="https://www.vntrip.vn/cam-nang/wp-content/uploads/2017/03/Long-Cung-la-mot-resort-nam-gan-canh-bien.jpeg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://www.vntrip.vn/cam-nang/wp-content/uploads/2017/03/Long-Cung-la-mot-resort-nam-gan-canh-bien.jpeg"
+                                             class="img-1">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://mia.vn/uploads/images/1507108554-du-lich-mua-thap-diem-duoc-gi-va-mat-gi-1.jpg"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3>Vũng Tàu</h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="http://tintuc.khanhhoa79.com/upload/media/entries/2017-05/04/11124-0-d4be24e044727c4212f46fec4df11f17.jpg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="http://tintuc.khanhhoa79.com/upload/media/entries/2017-05/04/11124-0-d4be24e044727c4212f46fec4df11f17.jpg"
+                                             class="img-1">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="http://cdn01.diadiemanuong.com/ddau/640x/ghim-lien-8-diem-dep-nhat-vn-thich-hop-cho-couple-huong-tuan-trang-mat-aa771320636368581142430101.jpg"
+                                             class="img-2">
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
                                             <h3>Khánh Hòa</h3>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
-                                                      src="https://www.chudu24.com/wp-content/uploads/2018/03/3-42.jpg">
+                                    <a class="image-hover img-roll" href="#!">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="https://media.foody.vn/images/beach-02jpg-182029.jpg"
+                                             class="img-1">
+                                        <img height="270px" alt="Điểm đến hàng đầu"
+                                             src="http://thegioiphunu.net/wp-content/uploads/2014/01/5-dia-diem-du-lich-tuan-trang-mat-ly-tuong-1.jpg"
+                                             class="img-2">
+
+                                    </a>
+                                    <a href="#">
                                         <div class="DestinationsTxt">
-                                            <h3>Nha Trang</h3>
+                                            <h3>Phú Quốc</h3>
                                         </div>
                                     </a>
                                 </div>
