--- a/src/app/view-detail/order/order.component.html
+++ b/src/app/view-detail/order/order.component.html
@@ -38,7 +38,7 @@
                         <label for="checkOut">Ngày đi</label>
                         <input type="date" class="form-control" id="checkOut" value="{{orderForm.value.checkOut}}">
                     </div>
-                    <button type="submit" class="btn btn-primary">Đặt ngay</button>
+                    <button type="submit" class="btn btn-primary">Đặt phòng</button>
                 </form>
             </div>
         </div>
@@ -88,7 +88,7 @@
             </div>
             <div class="text-center" style="margin-top: 20px; margin-bottom: 20px">
                 <button type="button" [disabled]="!date" class="btn btn-danger" data-toggle="modal"
-                        data-target="#exampleModal">Đặt ngay
+                        data-target="#exampleModal" style="background: #f4511e">Gửi yêu cầu đặt phòng
                 </button>
             </div>
 
