--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -23,21 +23,20 @@
         </ul>
     </nav>
     <div class="row">
-        <div class="col col-sm-4 col-xs-12">
-            <img class="body" src="http://127.0.0.1:8000/storage/{{house?.image[0]}}"
-                 width="100%">
+        <div class="col col-sm-4 col-xs-12 hover01">
+            <figure><img class="body" src="http://127.0.0.1:8000/storage/{{house?.image[0]}}"
+                         width="100%" height="280px"></figure>
 
         </div>
-        <div class="col col-sm-4 col-xs-12">
-
-            <img class="card-img-top"
+        <div class="col col-sm-4 col-xs-12 hover01">
+            <figure><img class="card-img-top"
                  src="http://127.0.0.1:8000/storage/{{house?.image[1]}}"
-                 alt="Card image cap" style="width: 100%">
+                         alt="Card image cap" height="280px" width="100%"></figure>
         </div>
-        <div class="col col-sm-4 col-xs-12">
-            <img class="card-img-top"
+        <div class="col col-sm-4 col-xs-12 hover01">
+            <figure><img class="card-img-top"
                  src="http://127.0.0.1:8000/storage/{{house?.image[2]}}"
-                 alt="Card image cap" style="width: 100%">
+                         alt="Card image cap" height="280px" width="100%"></figure>
         </div>
     </div>
     <div class="row">
@@ -57,7 +56,7 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <h4>Giá</h4>
-                                <p style="color: red">
+                                <p style="color: #f4511e">
                                     {{house?.price.toLocaleString('vi') + 'VND ngày/đêm'}}
                                 </p>
                             </div>
@@ -132,125 +131,123 @@
             <!--#-->
         </div>
     </div>
+</div>
 
+<!-- Footer -->
+<div>
+    <footer class="page-footer font-small unique-color-dark" style="margin-top: 20px">
 
-    <!-- Footer -->
-    <div>
-        <footer class="page-footer font-small unique-color-dark" style="margin-top: 20px">
+        <div style="background-color: #306d9f;">
+            <div class="container">
 
-            <div style="background-color: #6351ce;">
-                <div class="container">
-
-                    <div class="row d-flex align-items-center">
-                        <!-- Grid column -->
-                        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-                            <h5 class="mb-0">Theo dõi chúng tôi !</h5>
-                        </div>
-                        <!-- Grid row-->
-                        <div class="d-flex flex-row-reverse" style="margin-top: 5px">
-                            <!-- Grid column -->
-                            <ul class="footerNavLinks">
-                                <a href="#!"><img
-                                        src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-facebook.png"
-                                        alt="Facebook"></a>
-                                <a href="#!"><img
-                                        src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-youtube.png"
-                                        alt="Youtube"></a>
-                                <a href="#!"><img
-                                        src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-telegram.png"
-                                        alt="Telegram"></a>
-                            </ul>
-                        </div>
+                <div class="row d-flex align-items-center">
+                    <!-- Grid column -->
+                    <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                        <h5 class="mb-0">Theo dõi chúng tôi !</h5>
                     </div>
+                    <!-- Grid row-->
+                    <div class="d-flex flex-row-reverse" style="margin-top: 5px">
+                        <!-- Grid column -->
+                        <ul class="footerNavLinks">
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-facebook.png"
+                                    alt="Facebook"></a>
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-youtube.png"
+                                    alt="Youtube"></a>
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-telegram.png"
+                                    alt="Telegram"></a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- Grid column -->
+        </div>
+        <!-- Footer Links -->
+        <div class="container text-center text-md-left mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+
+                <div class="section col-md-4">
+                    <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/">
+                        <img class="td-retina-data"
+
+                             src="https://coinvn247.com/wp-content/uploads/2019/01/homecodegum.png"
+                             height="150px"
+                             width="265px" alt="">
+                    </a>
                 </div>
                 <!-- Grid column -->
-            </div>
-            <!-- Footer Links -->
-            <div class="container text-center text-md-left mt-5">
-                <!-- Grid row -->
-                <div class="row mt-3">
-
-                    <div class="section col-md-4">
-                        <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/">
-                            <img class="td-retina-data"
-
-                                 src="https://coinvn247.com/wp-content/uploads/2019/01/homecodegum.png"
-                                 height="150px"
-                                 width="265px" alt="">
-                        </a>
-                    </div>
-                    <!-- Grid column -->
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase font-weight-bold">Hỗ trợ</h6>
-                        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                        <p>
-                            <a href="#!">Câu hỏi thường </a>
-                        </p>
-                        <p>
-                            <a href="#!">Chính sách hủy</a>
-                        </p>
-                        <p>
-                            <a href="#!">Hướng dẫn đặt phòng</a>
-                        </p>
-
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-                        <!-- Links -->
-                        <h6 class="text-uppercase font-weight-bold">Cẩm nang du lịch </h6>
-                        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                        <p>
-                            <a href="#!">Đà Lạt </a>
-                        </p>
-                        <p>
-                            <a href="#!">Đà Nẵng </a>
-                        </p>
-                        <p>
-                            <a href="#!">SaPa </a>
-                        </p>
-
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-                        <!-- Links -->
-                        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                        <p>
-                            <i class="fas fa-home mr-3"></i> CodeGym, My Dinh, Ha Noi </p>
-                        <p>
-                            <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
-                        <p>
-                            <i class="fas fa-phone mr-3"></i> + 08 234 567 88</p>
-                        <p>
-                            <i class="fas fa-print mr-3"></i> + 08 234 567 89</p>
-
-                    </div>
-
-                    <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Hỗ trợ</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Câu hỏi thường </a>
+                    </p>
+                    <p>
+                        <a href="#!">Chính sách hủy</a>
+                    </p>
+                    <p>
+                        <a href="#!">Hướng dẫn đặt phòng</a>
+                    </p>
 
                 </div>
-                <!-- Grid row -->
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Cẩm nang du lịch </h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Đà Lạt </a>
+                    </p>
+                    <p>
+                        <a href="#!">Đà Nẵng </a>
+                    </p>
+                    <p>
+                        <a href="#!">SaPa </a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <i class="fas fa-home mr-3"></i> CodeGym, My Dinh, Ha Noi </p>
+                    <p>
+                        <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
+                    <p>
+                        <i class="fas fa-phone mr-3"></i> + 08 234 567 88</p>
+                    <p>
+                        <i class="fas fa-print mr-3"></i> + 08 234 567 89</p>
+
+                </div>
+
+                <!-- Grid column -->
 
             </div>
-            <!-- Footer Links -->
+            <!-- Grid row -->
 
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2019 Copyright:
-                <a href="#!">Bản quyền thuộc về Team CC </a>
-            </div>
-            <!-- Copyright -->
+        </div>
+        <!-- Footer Links -->
 
-        </footer>
-    </div>
-    <!-- Footer -->
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="#!">Bản quyền thuộc về Team CC </a>
+        </div>
+        <!-- Copyright -->
 
-
+    </footer>
 </div>
+<!-- Footer -->
+
 
