--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -72,7 +72,7 @@
 }
 .search {
     height: 60px;
-    /*margin-top: 20px;*/
+    margin-top: 20px;
     background-color: #ffffff ;
 }
 .image-hover * {
@@ -228,3 +228,51 @@
     -o-transition: all 1.2s ease-in-out;
 }
 
+#home-search .booking-category {
+    max-width: 100%;
+    min-height: auto;
+    background: #fff;
+    padding: 10px;
+}
+
+.search-T {
+    border-radius: 4px;
+    background-color: #fffbfa;
+    border: 1px solid #f4511e;
+    margin-top: 24px;
+    padding: 12px 0;
+}
+
+/*.tcl {*/
+    /*max-width: 283px;*/
+    /*background: #f4511e;*/
+    /*position: relative;*/
+    /*padding: 0 10px;*/
+    /*height: 40px;*/
+/*}*/
+
+.box-txt {
+    padding: 15px 24px 0 24px;
+    /*padding-top: 15px;*/
+    /*padding-right: 24px;*/
+    /*padding-bottom: 0px;*/
+    /*padding-left: 24px;*/
+}
+
+/*.tcl:after {*/
+    /*border-right: 20px solid #fffbfa;*/
+    /*border-top: 20px solid transparent;*/
+    /*border-bottom: 20px solid transparent;*/
+    /*content: "";*/
+    /*height: 0;*/
+    /*right: 0;*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*width: 0;*/
+/*}*/
+
+/*.tcl h4 {*/
+    /*color: #fff;*/
+    /*line-height: 40px;*/
+    /*font-size: 22px !important;*/
+/*}*/
