--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -39,8 +39,9 @@
     -webkit-border-radius: 120px / 40px;
     border-radius: 90px / 90px;
 }
+
 #home {
-    background: url(https://znews-photo.zadn.vn/Uploaded/nqgvzn_guhyxg/2017_08_31/COVERArtboard_1_1.jpg) no-repeat center center fixed;
+    background: url(https://znews-photo.zadn.vn/Uploaded/nqgvzn_guhyxg/2017_08_31/COVERArtboard_1_1.jpg);
     display: table;
     /*height: 700px;*/
     margin-top: 1px;
@@ -55,10 +56,12 @@
 .view {
     margin-top: 600px;
 }
+
 #services {
     background-color: #306d9f;
     color: #ffffff;
 }
+
 #services .glyphicon {
     border: 2px solid #FFFFFF;
     border-radius: 50%;
@@ -70,11 +73,13 @@
     vertical-align: middle;
     width: 140px;
 }
+
 .search {
     height: 60px;
     /*margin-top: 20px;*/
-    background-color: #ffffff ;
+    background-color: #ffffff;
 }
+
 .image-hover * {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -227,4 +232,5 @@
     -ms-transition: all 1.2s ease-in-out;
     -o-transition: all 1.2s ease-in-out;
 }
+
 
